[package]
name = "stepper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpio-cdev = {version = "0.4.0", features = ["async-tokio"]}
futures = "0.3.17"
structopt = "0.3.23"
quicli = "0.4.0"
thiserror = "1.0.29"
nix = "0.22.1"
tokio = {version="1.12.0", features = ["full"]}
lazy_static = "1.4.0"