[package]
name = "stepper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpio-cdev = {version = "0.5.0", features = ["async-tokio"]}
futures = "0.3.17"
structopt = "0.3.23"
thiserror = "1.0.29"
simple_logger = "1.13.0"
log = "0.4.14"
tokio = {version="1.12.0", features = ["full"]}